# Sofa.PointCloud

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Sofa.PointCloudConfig.cmake.in
assets/shaders/: gaussian_splatting.frag  gaussian_splatting.geom  gaussian_splatting.vert
assets/splats/: woodstructure.ply
examples/: deform-by-frame.py  dump-fem-ges.json  emio.py  emio_gs.py  example1.py  example1.xml  example1.xml.view  example2.py  example2.xml  example3.py  example3.py.view  example4.py  fem-deforming-splats.py  fem-gs-full.py  fem-gs.py  miniskinning.py  octree_garden.py  psl.py  skinning.py  spot-deform.py  spot.py  spot.py.view  two-spots.py  woodboot.py  woodboot.py.view
examples/large-scenes/: README.md  large-scene-flower.py  large-scene-garden.py  large-scene-room.py  large-scene-spot.py
examples/spot/: README.md  scene.py
examples/spot/python/spot/: __init__.py  __model__.py  __parameters__.py  assets.py
examples/test/: lod_spot.py  octree_lod.py  octree_view.py
src/sofa/pointcloud/: config.h.in  fwd.h  init.cpp
src/sofa/pointcloud/components/: OctreeNode.cpp  OctreeNode.h  PointCloudContainer.cpp  PointCloudContainer.h  PointCloudGeometry.cpp  PointCloudGeometry.h  PointCloudInspector.cpp  PointCloudInspector.h  PointCloudOctree.cpp  PointCloudOctree.h  PointCloudOctreeRenderer.cpp  PointCloudOctreeRenderer.h  PointCloudOctreeVisualModel.cpp  PointCloudOctreeVisualModel.h  PointCloudRenderer.cpp  PointCloudRenderer.h  PointCloudRendererBackend.cpp  PointCloudRendererBackend.cu  PointCloudRendererBackend.h  PointCloudRendererCUDA.cpp  PointCloudRendererCUDA.h  PointCloudTransform.cpp  PointCloudTransform.h  PointCloudVisualModel.cpp  PointCloudVisualModel.h  liteviz-dataloader.h  utils.cpp  utils.h
src/sofa/pointcloud/components/benchmarks/: bench_PointCloudOctree.cpp
